--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rspack/cli": "^1.1.5",
     "@rspack/core": "^1.1.5",
     "@swc/core": "^1.10.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
@@ -34,6 +35,7 @@
     "esbuild-register": "^3.6.0",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
+    "fs-extra": "^11.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
