--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "@vitest/coverage-v8": "^2.1.8",
+    "es-toolkit": "^1.29.0",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "fs-extra": "^11.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
+    "npm-check-updates": "^17.1.11",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "webpack-merge": "^6.0.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
