chore: use pnpx direct

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -20,7 +20,7 @@ jobs:
           cache: 'pnpm'
 
       # update react
-      - run: pnpm ncu -u 'react-*'
+      - run: pnpx npm-check-updates -u 'react-*'
 
       # install
       - run: pnpm install
