--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "test-cover": "vitest run --coverage",
     "prepublishOnly": "npm run build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "react-umd"
+  ],
+  "author": "magicdawn",
   "license": "ISC",
-  "description": "",
+  "description": "umd build of react v19",
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
   "devDependencies": {
     "@magicdawn/prettier-config": "^0.0.4",
@@ -55,5 +57,10 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/magicdawn/react-umd.git"
+  },
+  "homepage": "https://github.com/magicdawn/react-umd#readme"
 }
