chore: use step.if & remove annoying notifications

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -44,16 +44,20 @@ jobs:
             echo "has_changes=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Early exit
-        if: steps.check_changes.outputs.has_changes == 'false'
-        run: |
-          gh run cancel ${{ github.run_id }}
-          gh run watch ${{ github.run_id }}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #
+      # 每天收到通知, 太 TM 烦了 ...
+      #
+      # - name: Early exit
+      #   if: steps.check_changes.outputs.has_changes == 'false'
+      #   run: |
+      #     gh run cancel ${{ github.run_id }}
+      #     gh run watch ${{ github.run_id }}
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # 下方为 直接 push 到目标分支, 当然你也可以选择 Pull Request 方式
       - name: Commit files
+        if: ${{ fromJson(steps.check_changes.outputs.has_changes) }}
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -62,12 +66,14 @@ jobs:
 
       # 创建并推送 tag
       - name: Create tag
+        if: ${{ fromJson(steps.check_changes.outputs.has_changes) }}
         run: |
           VERSION=$(node -p "require('./package.json').version")
           git tag -f v$VERSION
 
       - name: Push changes
         uses: ad-m/github-push-action@master
+        if: ${{ fromJson(steps.check_changes.outputs.has_changes) }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
@@ -76,6 +82,7 @@ jobs:
 
       # 发布到 npm
       - name: Publish to NPM
+        if: ${{ fromJson(steps.check_changes.outputs.has_changes) }}
         run: npm publish --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
