--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "react-umd",
+  "type": "module",
   "version": "19.0.0",
+  "packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa",
+  "description": "umd build of react v19",
+  "author": "magicdawn",
+  "license": "MIT",
+  "homepage": "https://github.com/magicdawn/react-umd#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/magicdawn/react-umd.git"
+  },
+  "keywords": [
+    "react-umd"
+  ],
   "main": "index.js",
   "files": [
+    "README.md",
     "dist/",
-    "package.json",
-    "README.md"
+    "package.json"
   ],
   "scripts": {
     "build": "rspack build",
@@ -15,52 +28,45 @@
     "test-cover": "vitest run --coverage",
     "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "react-umd"
-  ],
-  "author": "magicdawn",
-  "license": "MIT",
-  "description": "umd build of react v19",
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
   "devDependencies": {
-    "@magicdawn/prettier-config": "^0.0.4",
-    "@rspack/cli": "^1.1.5",
-    "@rspack/core": "^1.1.5",
-    "@swc/core": "^1.10.0",
+    "@magicdawn/eslint-config": "^1.5.14",
+    "@magicdawn/prettier-config": "^0.1.0",
+    "@rspack/cli": "^1.6.8",
+    "@rspack/core": "^1.6.8",
+    "@swc/core": "^1.15.7",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.1",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "@vitest/coverage-v8": "^2.1.8",
-    "es-toolkit": "^1.29.0",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "@vitest/coverage-v8": "^4.0.16",
+    "es-toolkit": "^1.43.0",
     "esbuild-register": "^3.6.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "fs-extra": "^11.2.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "fs-extra": "^11.3.3",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16",
     "webpack-merge": "^6.0.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
   "lint-staged": {
-    "**/*": [
+    "*.{?(c|m)(j|t)s?(x),json,y?(a)ml}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "!*.{?(c|m)(j|t)s?(x),json,y?(a)ml}": [
       "prettier --write --ignore-unknown"
     ]
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/magicdawn/react-umd.git"
-  },
-  "homepage": "https://github.com/magicdawn/react-umd#readme"
+  }
 }
