--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,12 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "lib",
-    "allowSyntheticDefaultImports": true,
+    "target": "es2020",
+    "module": "esnext",
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "target": "ES2020",
-    "module": "CommonJS",
-    "strictNullChecks": true,
-    "skipLibCheck": true
-  },
-  "ts-node": {
-    "swc": true
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true
   }
 }
