--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-umd",
   "type": "module",
   "version": "19.2.3",
-  "packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa",
+  "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
   "description": "umd build of react v19",
   "author": "magicdawn",
   "license": "MIT",
@@ -34,22 +34,22 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@magicdawn/eslint-config": "^1.5.14",
+    "@magicdawn/eslint-config": "^1.6.1",
     "@magicdawn/prettier-config": "^0.1.0",
     "@npmcli/package-json": "^7.0.4",
-    "@rspack/cli": "^1.6.8",
-    "@rspack/core": "^1.6.8",
-    "@swc/core": "^1.15.7",
+    "@rspack/cli": "^1.7.2",
+    "@rspack/core": "^1.7.2",
+    "@swc/core": "^1.15.8",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.50.0",
-    "@typescript-eslint/parser": "^8.50.0",
-    "@vitest/coverage-v8": "^4.0.16",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
+    "@vitest/coverage-v8": "^4.0.17",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
-    "es-toolkit": "^1.43.0",
+    "es-toolkit": "^1.44.0",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -57,10 +57,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "npmcli__package-json": "link:@types/@types/npmcli__package-json",
-    "prettier": "^3.7.4",
-    "type-fest": "^5.3.1",
+    "prettier": "^3.8.0",
+    "tslog": "^4.10.2",
+    "type-fest": "^5.4.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.16",
+    "vitest": "^4.0.17",
     "webpack-merge": "^6.0.1"
   },
   "publishConfig": {
