--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -37,8 +37,8 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - run: git checkout -b dev
-        if: ${{ github.event.inputs.debug_enabled }}
+        if: ${{ inputs.debug_enabled }}
 
       - run: pnpx tsx ./scripts/sync-react-version.ts
         env:
-          DEV: ${{ github.event.inputs.debug_enabled }}
+          DEV: ${{ inputs.debug_enabled }}
