--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "@types/semver": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "@vitest/coverage-v8": "^4.0.18",
@@ -57,6 +58,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
+    "semver": "^7.7.3",
     "tslog": "^4.10.2",
     "type-fest": "^5.4.1",
     "typescript": "^5.9.3",
