--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "@magicdawn/eslint-config": "^1.6.1",
     "@magicdawn/prettier-config": "^0.1.0",
     "@npmcli/package-json": "^7.0.4",
-    "@rspack/cli": "^1.7.3",
-    "@rspack/core": "^1.7.3",
-    "@swc/core": "^1.15.10",
+    "@rspack/cli": "^1.7.4",
+    "@rspack/core": "^1.7.4",
+    "@swc/core": "^1.15.11",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^25.0.10",
-    "@types/react": "^19.2.9",
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@types/semver": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "@vitest/coverage-v8": "^4.0.18",
-    "axios": "^1.13.3",
+    "axios": "^1.13.4",
     "dayjs": "^1.11.19",
     "es-toolkit": "^1.44.0",
     "esbuild-register": "^3.6.0",
@@ -60,7 +60,8 @@
     "prettier": "^3.8.1",
     "semver": "^7.7.3",
     "tslog": "^4.10.2",
-    "type-fest": "^5.4.1",
+    "tsx": "^4.21.0",
+    "type-fest": "^5.4.2",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18",
     "webpack-merge": "^6.0.1"
